--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 nav{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', 'sans-serif';
 }
 
 nav ul{
@@ -35,5 +35,23 @@ nav ul li{
     align-items: center;
     font-weight: bolder;
     font-size: 1.3rem;
+}
+
+.container{
+    min-height: 75vh;
+}
+
+.bottom{
+    position: sticky;
+    height: 130px;
+    background-color: black;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#myProgressBar{
+    width: 80vw;
 }
 
